trunk/Archive/179da90405ddffd34a2e69750382c681-a575f249a4b24cce8d4b1e9d5097a146/output
+ g++ -std=c++11 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:6:15: error: ISO C++ forbids declaration of ‘some_method’ with no type [-fpermissive]
   some_method()
               ^
main.cpp: In member function ‘int ClassName<T>::some_method()’:
main.cpp:9:3: warning: no return statement in function returning non-void [-Wreturn-type]
   }
   ^
main.cpp: In function ‘int main()’:
main.cpp:14:21: warning: unused variable ‘d’ [-Wunused-variable]
   ClassName<double> d;
                     ^
main.cpp:15:18: warning: unused variable ‘i’ [-Wunused-variable]
   ClassName<int> i;
                  ^
+ echo 1
1
